# togolm

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PROJECT.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
admin/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
admin/app/: layout.tsx
admin/components/: confirm-dialog.tsx  shimmer.tsx  sidebar.tsx  stat-card.tsx  status-badge.tsx
admin/lib/: api.ts  auth.ts  i18n.ts
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_response_feedback.py
api/: Dockerfile
api/app/: auth.py  db.py  main.py  rate_limit.py
api/tests/: conftest.py  test_admin_feedback.py  test_auth.py  test_corpus.py  test_documents.py  test_feedback.py  test_indexation.py  test_ingestor_idempotence.py  test_llm.py  test_query.py  test_query_enrichment.py  test_query_graph.py  test_rag.py  test_rate_limit.py
assemble nationnale/: infos.txt
corpus/: __init__.py  celery_app.py  scrapy.cfg  tasks.py
corpus/datasets/: togolese_recipes_justin.jsonl
corpus/processors/: cleaner.py  embedder.py  ingestor.py  local_ingestor.py
corpus/scrapers/: items.py  middlewares.py  pipelines.py  settings.py
db/: __init__.py  connection.py
docs/: admin-api.md  api-reference.md  architecture.md  evaluation.md  generate_presentation.py  huggingface-publish.md
evals/: test_rag_deepeval.py
evals/goldens/: rag_smoke.jsonl
finetuning/dataset/: formatter.py  generator.py
finetuning/notebooks/: train_colab.ipynb  train_kaggle.ipynb
finetuning/scripts/: publish.py  push_model_card.py
finetuning/train/: config.py  trainer.py
nginx/: nginx.conf
rag/: __init__.py
rag/generation/: __init__.py  chains.py  llm.py  prompts.py
rag/indexation/: __init__.py  chunker.py  embedder.py  ingestor.py  local_ingestor.py
rag/orchestration/: __init__.py  classification.py  graph.py
scripts/: add_key_prefix.sql  add_word_count.sql  create_api_key.py  create_user_queries.sql  embed_missing.py  init.sql  push_dataset.py  run_scrapers.py  vps_push_dataset.sh  vps_setup.sh  vps_update.sh
sdk/python/: README.md  pyproject.toml
sdk/python/togolm/: __init__.py  client.py
showcase/: .env.example  README.md  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml
(+102 files in other folders)
